--- a/css/main.css
+++ b/css/main.css
@@ -29,3 +29,27 @@ img:nth-child(5) {
   display: none;
 }
 
+@media only screen and (min-width: 25em) {
+
+  img {
+    float: left;
+    width: 50%;
+  }
+
+  img:first-child {
+    width: 100%;
+    clear: both;
+  }
+
+  img:nth-child(2) {
+    float: left;
+    display: flex;
+  }
+
+  img:nth-child(5) {
+    float: left;
+    display: flex;
+  }
+
+}
+
