--- a/css/main.css
+++ b/css/main.css
@@ -53,3 +53,16 @@ img:nth-child(5) {
 
 }
 
+@media only screen and (min-width: 38em) {
+
+
+  img {
+    width: 33.33%;
+  }
+
+  img:nth-child(5) {
+    display: none;
+  }
+
+}
+
